Address replay review feedback